[package]
name = "mirrorlist-server"
version = "3.0.7"
authors = ["Adrian Reber <adrian@lisas.de"]
edition = "2018"

[profile.release]
lto = true

[dependencies]
hyper = { version = "0.14", features = ["server", "http1", "http2", "runtime"] }
log = "0.4"
pretty_env_logger = "0.5"
chrono = "0.4"
protobuf = "2.14.0"
url = "2.4.1"
regex = "1"
ipnet = "2.8.0"
treebitmap = "0.4.0"
maxminddb = "0.23.0"
rand = "0.8"
itertools = "0.11.0"
getopts = "0.2"
diesel = { version = "2.0.4", features = ["postgres"] }
dotenv = "0.15.0"
dns-lookup = "2.0.2"
ipnetwork = "0.20.0"
indicatif = "0.17.5"
console = "0.15.8"
tracing = "0.1.37"
socket2 = "0.5.3"

[dependencies.tokio]
version = "1.28.2"
features = ["macros", "rt-multi-thread"]

[build-dependencies]
protobuf-codegen-pure = "2.14.0"

[dev-dependencies]
tempfile = "3.10.1"
