[package]
name = "mirrorlist-server"
version = "3.0.7"
authors = ["Adrian Reber <adrian@lisas.de"]
edition = "2018"

[profile.release]
lto = true

[dependencies]
hyper = { version = "0.14", features = ["server", "http1", "http2", "runtime"] }
log = "0.4"
pretty_env_logger = "0.5"
chrono = "0.4.42"
protobuf = "3.7.2"
regex = "1"
ipnet = "2.11.0"
treebitmap = "0.4.0"
maxminddb = "0.26.0"
rand = "0.9.2"
itertools = "0.14.0"
getopts = "0.2"
diesel = { version = "2.3.4", features = ["postgres"] }
dotenv = "0.15.0"
dns-lookup = "3.0.1"
ipnetwork = "0.21.1"
indicatif = "0.18.3"
console = "0.16.1"

[dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread"]

[build-dependencies]
protobuf-codegen = "3.7.2"

[dev-dependencies]
tempfile = "3.10.1"
